# MagCalibrate

./: Android.mk  build.gradle  import-summary.txt  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/madgaze/madmagcalibrate/: IMagCalibrate.aidl
app/src/main/java/com/madgaze/madmagcalibrate/: MainActivity.java
app/src/main/jni/: Android.mk  Calibration.cpp  Calibration.h  MadMagCalibrate.cpp  com_madgaze_madmagcalibrate_MainActivity.h  ellipsoid_main.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: main.xml
app/src/main/res/values/: dimens.xml  strings.xml
